Fix apply button align in month year pick list

--- a/src/components/calendar/_calendar-toolbar.scss
+++ b/src/components/calendar/_calendar-toolbar.scss
@@ -138,7 +138,6 @@
 
     .apply {
       padding: 9px 3px;
-      top: 9px;
     }
 
     .today {
